--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,8 @@ itsdangerous==1.1.0
 Jinja2==2.11.1
 jsonschema==3.2.0
 MarkupSafe==1.1.1
-
+numpy==1.18.1
+pandas==1.0.1
 pymongo==3.10.1
 pyodbc==4.0.30
 pyrsistent==0.15.7
@@ -21,4 +22,3 @@ six==1.14.0
 SQLAlchemy==1.3.13
 Werkzeug==0.16.1
 zipp==3.1.0
-gunicorn
